@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[mms] Fix search in Facebook driver.
 [jan] Add script to import contacts from Open-Xchange.
 [jan] Don't remove missing contacts from distributions lists in Kolab backends
       (Bug #12861).
